--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="lib/stylesheets/stylesheet.css">
     <title>Thigpen Designs</title>
   </head>
   <body>
-    <ul class="nav justify-content-center">
+    <ul class="row-grey-height nav fixed-top justify-content-center">
       <li class="nav-item">
         <a class="nav-link active" href="#">Active</a>
       </li>
@@ -25,27 +25,80 @@
         <a class="nav-link disabled" href="#">Disabled</a>
       </li>
     </ul>
-    <div class="row row-height">
-      <div class="col d-flex container">
-        <div class="col align-self-end ml-auto p-2 text-right">
-          <h1 >Scott Thigpen</h1>
-          <h4 class="font-italic">creative developer</h4>
+    <div class="padding-top-150 d-flex row-grey-height flex-row-reverse">
+      <div class="d-flex justify-content-start flex-column mr-4">
+        <div class="font-white">
+          <h1>
+            Hi, I'm Scott Thigpen
+          </h1>
+        </div>
+        <div class="font-white">
+          <h4>
+            And I'm a <span class="fade-hidden" id="textswap"> Creative </span>.
+          </h4>
+        </div>
+        <div class="align-self-end mt-auto p-2 yellow-background mb-4">
+          <p>
+            Climb leg asdflkjaertvlkjasntvkjn (sits on keyboard) cat cat moo moo lick ears lick paws. Fall asleep upside-down. Use lap as chair white cat sleeps on a black shirt, lie in the sink all day proudly present butt to human.
+          </p>
         </div>
       </div>
+    </div>
+    <div class="d-flex row-grey-alt justify-content-center">
+      <ul class="nav flex-column">
+        <li class="nav-item">
+          <a class="nav-link active" href="#">Illustration</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Design</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">UIUX</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#">Front End</a>
+        </li>
+      </ul>
+    </div>
+    <div class="d-flex flex-column row-grey-height p-5">
+      <div>
+        <h2>Illustration</h2>
       </div>
-      <div class="d-flex col-6 ml-auto align-items-end flex-column">
-        <div class="row row-background">
-          <div class="p-5">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse maximus augue molestie ullamcorper scelerisque. Aliquam feugiat turpis arcu, vitae egestas nulla ornare ac. Nullam ipsum lorem, imperdiet eu dui vitae, pulvinar accumsan ex. Praesent tempor ipsum nisi, nec tempor ipsum gravida sed. Aenean sit amet consectetur lorem. Mauris ut enim sed mauris condimentum condimentum. Fusce ut leo vestibulum, tincidunt risus vitae, commodo lacus.
-            </p>
-          </div>
+      <div>
+        <p>I have been illustrating for fucking forever.  I'm so very, very tired.  don't ask me to illustrate your children's book because you don't pay shit anyway</p>
       </div>
+      <div class="d-flex flex-row">
+        <div class="p-2"><img class="image-size" src="static/images/1dribbb-buns.png" /></div>
+        <div class="p-2"><img class="image-size" src="static/images/1dribbb-buns.png" /></div>
+        <div class="p-2"><img class="image-size" src="static/images/1dribbb-buns.png" /></div>
       </div>
     </div>
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <div class="d-flex flex-column row-grey-alt">
+      <div>
+        <h2>Design</h2>
+      </div>
+      <div>
+        <p>I can fake it</p>
+      </div>
+    </div>
+    <div class="d-flex flex-column row-grey-height">
+      <div>
+        <h2>UI/UX</h2>
+      </div>
+      <div>
+        <p>Everyone lies now and says they are a Ui/Ux designer</p>
+      </div>
+    </div>
+    <div class="d-flex flex-column row-grey-alt">
+      <div>
+        <h2>Front End</h2>
+      </div>
+      <div>
+        <p>I suck at code</p>
+      </div>
+    </div>
+</div>
+    <script src="lib/javascripts/helper.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
