--- a/index.html
+++ b/index.html
@@ -13,31 +13,34 @@
   <body>
     <ul class="row-grey-height nav fixed-top justify-content-center">
       <li class="nav-item">
-        <a class="nav-link active" href="#">Active</a>
+        <a class="nav-link active" href="#">About</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link" href="#">Illustration</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link" href="#">Design</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
+        <a class="nav-link disabled" href="#">UIUX</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="#">Front End Developer</a>
       </li>
     </ul>
-    <div class="padding-top-150 d-flex row-grey-height flex-row-reverse">
+    <div class="div-fill padding-top-150 pr-3 d-flex row-grey-height flex-row-reverse">
       <div class="d-flex justify-content-start flex-column mr-4">
-        <div class="font-white">
+        <div class="primary-color">
           <h1>
             Hi, I'm Scott Thigpen
           </h1>
         </div>
-        <div class="font-white">
-          <h4>
-            And I'm a <span class="fade-hidden" id="textswap"> Creative </span>.
-          </h4>
+        <div class="primary-color">
+          <h5>
+            And I'm a creative <span class="fade text-italics" id="textswap"> person </span>.
+          </h5>
         </div>
-        <div class="align-self-end mt-auto p-2 yellow-background mb-4">
+        <div class="align-self-end p-2 card mb-4">
           <p>
             Climb leg asdflkjaertvlkjasntvkjn (sits on keyboard) cat cat moo moo lick ears lick paws. Fall asleep upside-down. Use lap as chair white cat sleeps on a black shirt, lie in the sink all day proudly present butt to human.
           </p>
@@ -47,6 +50,9 @@
     <div class="d-flex row-grey-alt justify-content-center">
       <ul class="nav flex-column">
         <li class="nav-item">
+          <li class="nav-item">
+            <a class="nav-link disabled" href="#">About</a>
+          </li>
           <a class="nav-link active" href="#">Illustration</a>
         </li>
         <li class="nav-item">
@@ -65,12 +71,23 @@
         <h2>Illustration</h2>
       </div>
       <div>
-        <p>I have been illustrating for fucking forever.  I'm so very, very tired.  don't ask me to illustrate your children's book because you don't pay shit anyway</p>
+        <p class="primary-color">Create intuitive and beautiful illustrations.</p>
       </div>
       <div class="d-flex flex-row">
-        <div class="p-2"><img class="image-size" src="static/images/1dribbb-buns.png" /></div>
-        <div class="p-2"><img class="image-size" src="static/images/1dribbb-buns.png" /></div>
-        <div class="p-2"><img class="image-size" src="static/images/1dribbb-buns.png" /></div>
+        <div class="p-2 mr-5">
+          <img class="image-size-lg" src="static/images/nuyu.jpg" />
+          <h3 class="pt-3 primary-color">Print Media</h3>
+          <p class="primary-color">
+            Sleep kitty scratches couch bad kitty so paw at beetle and eat it before it gets away or thinking longingly about tuna brine.
+          </p>
+        </div>
+        <div class="p-2">
+          <img class="image-size-sm" src="static/images/kedi.gif" />
+          <h3 class="pt-3 primary-color">Web and Animation</h3>
+          <p class="primary-color">
+            Sleep kitty scratches couch bad kitty so paw at beetle and eat it before it gets away or thinking longingly about tuna brine.
+          </p>
+        </div>
       </div>
     </div>
     <div class="d-flex flex-column row-grey-alt">
