--- a/index.html
+++ b/index.html
@@ -10,78 +10,83 @@
     <link rel="stylesheet" type="text/css" href="lib/stylesheets/stylesheet.css">
     <title>Thigpen Designs</title>
   </head>
-  <body>
+  <body data-spy="scroll" data-target=".navbar" data-offset="50">
     <ul class="row-grey-height nav fixed-top justify-content-center">
       <li class="nav-item">
-        <a class="nav-link active" href="#">About</a>
+        <a class="nav-link active" href="#home">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Illustration</a>
+        <a class="nav-link active" href="#about">About</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Design</a>
+        <a class="nav-link" href="#illustration">Illustration</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link disabled" href="#">UIUX</a>
+        <a class="nav-link" href="#uiux">UIUX</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link disabled" href="#">Front End Developer</a>
+        <a class="nav-link" href="#code">Front End Developer</a>
       </li>
     </ul>
-    <div class="div-fill padding-top-150 pr-3 d-flex row-grey-height flex-row-reverse">
-      <div class="d-flex justify-content-start flex-column mr-4">
-        <div class="primary-color">
-          <h1>
-            Hi, I'm Scott Thigpen
-          </h1>
+  <div class="row-grey-height">
+
+    <div class="container container-table anchor div-fill mt-5" id="home">
+      <div class="row vertical-center-row">
+
+        <div class="row pt-5">
+          <div class="col">
+            <h4>Hi, I'm Scott Thigpen</h4>
+          </div>
         </div>
-        <div class="primary-color">
-          <h5>
-            And I'm a creative <span class="fade text-italics" id="textswap"> person </span>.
-          </h5>
-        </div>
-        <div class="align-self-end p-2 card mb-4">
-          <p>
-            Climb leg asdflkjaertvlkjasntvkjn (sits on keyboard) cat cat moo moo lick ears lick paws. Fall asleep upside-down. Use lap as chair white cat sleeps on a black shirt, lie in the sink all day proudly present butt to human.
-          </p>
+        <div class="row">
+          <div class="col">
+            <h4>And I'm a creative <span class="fade text-italics" id="textswap"> person </span>.</h4>
+          </div>
         </div>
       </div>
     </div>
-    <div class="d-flex row-grey-alt justify-content-center">
-      <ul class="nav flex-column">
-        <li class="nav-item">
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#">About</a>
-          </li>
-          <a class="nav-link active" href="#">Illustration</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Design</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">UIUX</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#">Front End</a>
-        </li>
-      </ul>
-    </div>
-    <div class="d-flex flex-column row-grey-height p-5">
-      <div>
-        <h2>Illustration</h2>
+    <div class="container anchor div-fill" id="about">
+      <div class="row pt-5">
+        <h2 class="ml-2">About Me</h2>
       </div>
-      <div>
-        <p class="primary-color">Create intuitive and beautiful illustrations.</p>
+      <div class="row">
+        <p class="ml-2 primary-color">I do a bunch of stuff</p>
       </div>
-      <div class="d-flex flex-row">
-        <div class="p-2 mr-5">
-          <img class="image-size-lg" src="static/images/nuyu.jpg" />
-          <h3 class="pt-3 primary-color">Print Media</h3>
+      <div class="row">
+        <div class="col-sm">
+          <div>
+            <img class="image-size-lg" src="static/images/me.jpg" />
+          </div>
+        </div>
+        <div class="col-sm">
+          <h3 class="primary-color">I know things</h3>
           <p class="primary-color">
-            Sleep kitty scratches couch bad kitty so paw at beetle and eat it before it gets away or thinking longingly about tuna brine.
+            Attack the dog then pretend like nothing happened rub face on owner
+Eat the rubberband cat fur is the new black gnaw the corn cob annoy kitten brother with poking
+Cat ipsum dolor sit amet, lick master's hand at first then bite because im moody, curl into a furry donut destroy couch. Hide at bottom of staircase to trip human nap all day. Mewl for food at 4am steal the warm chair right after you get up. Run outside as soon as door open throw down all the stuff in the kitchen stand in doorway, unwilling to chose whether to stay in or go out so chase after silly colored fish toys around the house, paw at your fat belly or refuse to leave cardboard box. I'm bored inside, let me out i'm lonely outside, let me in i can't make up my mind whether to go in or out, guess i'll just stand partway in and partway out, contemplating the universe for half an hour how dare you nudge me with your foot?!?! leap into the air in greatest offense! scream at teh bath so fight an alligator and win head nudges so stretch. Roll on the floor purring your whiskers off sleep everywhere, but not in my bed for open the door, let me out, let me out, let me-out, let me-aow, let meaow, meaow! meow loudly just to annoy owners or licks your face, give attitude. Mewl for food at 4am. Floof tum, tickle bum, jellybean footies curly toes freak human out make funny noise mow mow mow mow mow mow success now attack human so meow in empty rooms, so stinky cat, and mark territory then cats take over the world. Ooh, are those your $250 dollar sandals? lemme use that as my litter box eat an easter feather as if it were a bird then burp victoriously, but tender and lie in the sink all day scratch leg; meow for can opener to feed me. Head nudges bathe private parts with tongue then lick owner's face but mewl for food at 4am, and scratch the box yet purr cat ass trophy.
+
           </p>
         </div>
-        <div class="p-2">
+      </div>
+    </div>
+    <div class="container anchor div-fill" id="illustration">
+      <div class="row pt-5">
+        <h2 class="ml-2">Illustration</h2>
+      </div>
+      <div class="row">
+        <p class="ml-2 primary-color">Create intuitive and beautiful illustrations.</p>
+      </div>
+      <div class="row">
+        <div class="col-sm">
+          <div>
+            <img class="image-size-lg" src="static/images/nuyu.jpg" />
+            <h3 class="pt-3 primary-color">Print Media</h3>
+            <p class="primary-color">
+              Sleep kitty scratches couch bad kitty so paw at beetle and eat it before it gets away or thinking longingly about tuna brine.
+            </p>
+          </div>
+        </div>
+        <div class="col-sm">
           <img class="image-size-sm" src="static/images/kedi.gif" />
           <h3 class="pt-3 primary-color">Web and Animation</h3>
           <p class="primary-color">
@@ -90,30 +95,113 @@
         </div>
       </div>
     </div>
-    <div class="d-flex flex-column row-grey-alt">
-      <div>
-        <h2>Design</h2>
+    <div class="container anchor div-fill" id="uiux">
+      <div class="row pt-5">
+        <h2 class="ml-2">ui/ux</h2>
       </div>
-      <div>
-        <p>I can fake it</p>
+      <div class="row">
+        <p class="ml-2 primary-color">Throwing some empathy on ya</p>
+      </div>
+      <div class="row">
+        <div class="col-sm">
+          <div>
+            <img class="image-size-lg" src="static/images/testitout.png" />
+            <h3 class="pt-3 primary-color">User Interface</h3>
+            <p class="primary-color">
+              Sleep kitty scratches couch bad kitty so paw at beetle and eat it before it gets away or thinking longingly about tuna brine.
+            </p>
+          </div>
+        </div>
+        <div class="col-sm">
+          <img class="image-size-sm" src="static/images/iterations.png" />
+          <h3 class="pt-3 primary-color">User Experience</h3>
+          <p class="primary-color">
+            Sleep kitty scratches couch bad kitty so paw at beetle and eat it before it gets away or thinking longingly about tuna brine.
+          </p>
+        </div>
       </div>
     </div>
-    <div class="d-flex flex-column row-grey-height">
-      <div>
-        <h2>UI/UX</h2>
+    <div class="container anchor div-fill" id="code">
+      <div class="row pt-5">
+        <h2 class="ml-2">Front End Development</h2>
       </div>
-      <div>
-        <p>Everyone lies now and says they are a Ui/Ux designer</p>
+      <div class="row">
+        <p class="ml-2 primary-color">I know Javascript</p>
+      </div>
+      <div class="row">
+        <div class="col-sm">
+          <div>
+            <img class="image-size-lg" src="static/images/code.png" />
+            <h3 class="pt-3 primary-color">Code Stuff</h3>
+            <p class="primary-color">
+              Sleep kitty scratches couch bad kitty so paw at beetle and eat it before it gets away or thinking longingly about tuna brine.
+            </p>
+          </div>
+        </div>
       </div>
     </div>
-    <div class="d-flex flex-column row-grey-alt">
-      <div>
-        <h2>Front End</h2>
+    <!-- Footer -->
+<footer class="page-footer font-small row-grey-alt pt-4 mt-4">
+
+  <!-- Footer Links -->
+  <div class="container-fluid text-center text-md-left">
+
+    <!-- Grid row -->
+    <div class="row">
+
+      <!-- Grid column -->
+      <div class="col-md-6 mt-md-0 mt-3">
+
+        <!-- Content -->
+        <h5 class="text-uppercase">Footer Content</h5>
+        <p>Contact Me here</p>
+
       </div>
-      <div>
-        <p>I suck at code</p>
+      <!-- Grid column -->
+
+      <hr class="clearfix w-100 d-md-none pb-3">
+
+      <!-- Grid column -->
+      <div class="col-md-6 mb-md-0 mb-3">
+
+        <!-- Links -->
+        <h5 class="text-uppercase">Links</h5>
+
+        <ul class="list-unstyled">
+          <li>
+            <a href="#!">Link 1</a>
+          </li>
+          <li>
+            <a href="#!">Link 2</a>
+          </li>
+          <li>
+            <a href="#!">Link 3</a>
+          </li>
+          <li>
+            <a href="#!">Link 4</a>
+          </li>
+        </ul>
+
       </div>
+      <!-- Grid column -->
+
     </div>
+    <!-- Grid row -->
+
+  </div>
+  <!-- Footer Links -->
+
+  <!-- Copyright -->
+  <div class="footer-copyright text-center py-3">© 2018 Copyright:
+    <a href="#!"> ThigpenDesigns.com</a>
+  </div>
+  <!-- Copyright -->
+
+</footer>
+<!-- Footer -->
+
+            Copy
+
 </div>
     <script src="lib/javascripts/helper.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
