updating project with css

--- a/index.html
+++ b/index.html
@@ -11,23 +11,37 @@
     <title>Thigpen Designs</title>
   </head>
   <body data-spy="scroll" data-target=".navbar" data-offset="50">
-    <ul class="row-grey-height nav fixed-top justify-content-center">
-      <li class="nav-item">
-        <a class="nav-link active" href="#home">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link active" href="#about">About</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#illustration">Illustration</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#uiux">UIUX</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#code">Front End Developer</a>
-      </li>
-    </ul>
+    <nav class="navbar navbar-default fixed-top navbar-expand-lg navbar-light bg-light">
+      <div class="container">
+        <a class="navbar-brand" href="#">Thigpen Designs</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#about">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#illustration">Illustration</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#uiux">UIUX</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#code">Front End</a>
+            </li>
+
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+
   <div class="row-grey-height">
 
     <div class="container container-table anchor div-fill mt-5" id="home">
@@ -47,7 +61,7 @@
     </div>
     <div class="container anchor div-fill" id="about">
       <div class="row pt-5">
-        <h2 class="ml-2">About Me</h2>
+        <h2 class="ml-2 pt-5">About Me</h2>
       </div>
       <div class="row">
         <p class="ml-2 primary-color">I do a bunch of stuff</p>
@@ -71,7 +85,7 @@ Cat ipsum dolor sit amet, lick master's hand at first then bite because im moody
     </div>
     <div class="container anchor div-fill" id="illustration">
       <div class="row pt-5">
-        <h2 class="ml-2">Illustration</h2>
+        <h2 class="ml-2 pt-5">Illustration</h2>
       </div>
       <div class="row">
         <p class="ml-2 primary-color">Create intuitive and beautiful illustrations.</p>
@@ -97,7 +111,7 @@ Cat ipsum dolor sit amet, lick master's hand at first then bite because im moody
     </div>
     <div class="container anchor div-fill" id="uiux">
       <div class="row pt-5">
-        <h2 class="ml-2">ui/ux</h2>
+        <h2 class="ml-2 pt-5">ui/ux</h2>
       </div>
       <div class="row">
         <p class="ml-2 primary-color">Throwing some empathy on ya</p>
@@ -123,7 +137,7 @@ Cat ipsum dolor sit amet, lick master's hand at first then bite because im moody
     </div>
     <div class="container anchor div-fill" id="code">
       <div class="row pt-5">
-        <h2 class="ml-2">Front End Development</h2>
+        <h2 class="ml-2 pt-5">Front End Development</h2>
       </div>
       <div class="row">
         <p class="ml-2 primary-color">I know Javascript</p>
