--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
     </nav>
 
 
-  <div class="row-grey-height">
+  <div class="d-flex flex-column row-grey-height">
 
-    <div class="container container-table anchor div-fill mt-5" id="home">
+    <div class="p-5 offset-100" id="home">
       <div class="row vertical-center-row">
 
-        <div class="row pt-5">
+        <div class="offset-100 row pt-5">
           <div class="col">
             <h4>Hi, I'm Scott Thigpen</h4>
           </div>
@@ -59,8 +59,8 @@
         </div>
       </div>
     </div>
-    <div class="container anchor div-fill" id="about">
-      <div class="row pt-5">
+    <div class="p-5" id="about">
+      <div class="row pt-5 offset-200">
         <h2 class="ml-2 pt-5">About Me</h2>
       </div>
       <div class="row">
@@ -83,7 +83,7 @@ Cat ipsum dolor sit amet, lick master's hand at first then bite because im moody
         </div>
       </div>
     </div>
-    <div class="container anchor div-fill" id="illustration">
+    <div class="p-5" id="illustration">
       <div class="row pt-5">
         <h2 class="ml-2 pt-5">Illustration</h2>
       </div>
@@ -109,8 +109,8 @@ Cat ipsum dolor sit amet, lick master's hand at first then bite because im moody
         </div>
       </div>
     </div>
-    <div class="container anchor div-fill" id="uiux">
-      <div class="row pt-5">
+    <div class="p-5 offset-100" id="uiux">
+      <div class="row">
         <h2 class="ml-2 pt-5">ui/ux</h2>
       </div>
       <div class="row">
@@ -135,8 +135,8 @@ Cat ipsum dolor sit amet, lick master's hand at first then bite because im moody
         </div>
       </div>
     </div>
-    <div class="container anchor div-fill" id="code">
-      <div class="row pt-5">
+    <div class="p-5" id="code">
+      <div class="row offset-100">
         <h2 class="ml-2 pt-5">Front End Development</h2>
       </div>
       <div class="row">
