--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
         <div class="row">
           <div class="col">
-            <h4>And I'm a creative <span class="fade text-italics" id="textswap"> person </span>.</h4>
+            <h4>And I'm a creative <span class="fade text-italics color-yellow" id="textswap"> person </span>.</h4>
           </div>
         </div>
       </div>
